[JP-3085] Fixed the issue where some characters were not fully visible in the title.

--- a/copl/com.elster.jupiter.extjs/src/main/web/js/ext/packages/uni-theme-skyline/sass/src/panel/NoItemsFound.scss
+++ b/copl/com.elster.jupiter.extjs/src/main/web/js/ext/packages/uni-theme-skyline/sass/src/panel/NoItemsFound.scss
@@ -43,7 +43,7 @@
 
     *[class*='#{$prefix}panel-header-text-container-'] {
         font-family: 'Lato', helvetica, arial, verdana, sans-serif;
-        font-size: 20px;
+        font-size: 18px;
         color: #686868;
     }
 
